--- a/.github/workflows/node-js.yaml
+++ b/.github/workflows/node-js.yaml
@@ -2,10 +2,6 @@ name: Node.js
 
 on:
   workflow_call:
-    inputs:
-      node-version:
-        required: true
-        type: string
 
 jobs:
   build:
@@ -16,10 +12,10 @@ jobs:
         uses: actions/checkout@v2.4.0
 
       - name: Use Node.js ${{ inputs.node-version }}
-        uses: actions/setup-node@v2.4.1
+        uses: actions/setup-node@v2.5.0
         with:
-          node-version: ${{ inputs.node-version }}
           cache: "npm"
+          node-version-file: ".nvmrc"
 
       - name: Install Dependencies
         run: npm install --quiet
