--- a/.github/workflows/node-js.yaml
+++ b/.github/workflows/node-js.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: Use Checkout
         uses: actions/checkout@v2.4.0
 
-      - name: Use Node.js ${{ inputs.node-version }}
+      - name: Use Node.js
         uses: actions/setup-node@v2.5.0
         with:
           cache: "npm"
