--- a/.github/workflows/deployer.yaml
+++ b/.github/workflows/deployer.yaml
@@ -4,7 +4,8 @@ on:
   workflow_call:
     inputs:
       deployer-version:
-        required: true
+        default: "7.0.0-rc.4"
+        required: false
         type: string
       environment:
         required: true
