--- a/.github/workflows/deployer.yaml
+++ b/.github/workflows/deployer.yaml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       deployer-version:
-        default: "7.0.0-rc.8"
+        default: "7.0.0"
         required: false
         type: string
       environment:
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v3.0.2
 
       - name: Use PHP ${{ inputs.php-version }}
-        uses: shivammathur/setup-php@2.19.1
+        uses: shivammathur/setup-php@2.21.1
         with:
           php-version: ${{ inputs.php-version }}
 
