Removed Deprecated set-output Command

--- a/.github/workflows/deployer.yaml
+++ b/.github/workflows/deployer.yaml
@@ -61,7 +61,7 @@ jobs:
       - name: Get Composer Cache Directory
         if: ${{ inputs.run-composer }}
         id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
 
       - name: Use Composer Cache Directory
         if: ${{ inputs.run-composer }}
