--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Get Composer Cache Directory
         id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
 
       - name: Use Composer Cache Directory
         uses: actions/cache@v3.0.11
