--- a/.github/workflows/deployer.yaml
+++ b/.github/workflows/deployer.yaml
@@ -105,12 +105,14 @@ jobs:
         run: npm run production
 
       - name: Convert Environment Input To Lowercase
-        id: to-lowercase
-        run: echo "environment=${INPUT_ENVIRONMENT,,}" >> $GITHUB_OUTPUT
+        id: environment
+        uses: ASzc/change-string-case-action@v5
+        with:
+          string: ${{ inputs.environment }}
 
       - name: Deploy
         uses: deployphp/action@v1.0.17
         with:
-          dep: deploy --revision=${{ github.sha }} ${{ steps.to-lowercase.outputs.environment }}
+          dep: deploy --revision=${{ github.sha }} ${{ steps.environment.outputs.lowercase }}
           deployer-version: ${{ inputs.deployer-version }}
           private-key: ${{ secrets.private-key }}
