--- a/.github/workflows/node-js.yaml
+++ b/.github/workflows/node-js.yaml
@@ -7,6 +7,10 @@ on:
         default: false
         required: false
         type: boolean
+      run-prettier:
+        default: false
+        required: false
+        type: boolean
       run-stylelint:
         default: false
         required: false
@@ -40,6 +44,10 @@ jobs:
       - name: Run ESLint
         if: ${{ inputs.run-eslint }}
         run: npm run eslint
+
+      - name: Run Prettier
+        if: ${{ inputs.run-prettier }}
+        run: npm run prettier
 
       - name: Run Stylelint
         if: ${{ inputs.run-stylelint }}
