--- a/.github/workflows/deployer.yaml
+++ b/.github/workflows/deployer.yaml
@@ -10,10 +10,6 @@ on:
       environment:
         required: true
         type: string
-      notify-ms-teams:
-        default: false
-        required: false
-        type: boolean
       php-version:
         required: true
         type: string
@@ -39,9 +35,9 @@ on:
     secrets:
       composer-auth-json:
         required: false
-      ms-teams-webhook:
-        required: false
       private-key:
+        required: true
+      slack-webhook:
         required: true
 
 jobs:
@@ -117,17 +113,8 @@ jobs:
           string: ${{ inputs.environment }}
 
       - name: Deploy
-        if: ${{ !inputs.notify-ms-teams }}
         uses: deployphp/action@v1.0.22
         with:
-          dep: deploy --revision=${{ github.sha }} ${{ steps.environment.outputs.lowercase }}
-          deployer-version: ${{ inputs.deployer-version }}
-          private-key: ${{ secrets.private-key }}
-
-      - name: Deploy (Notify MS Teams)
-        if: ${{ inputs.notify-ms-teams }}
-        uses: deployphp/action@v1.0.22
-        with:
-          dep: deploy -o teams_webhook=${{ secrets.ms-teams-webhook }} --revision=${{ github.sha }} ${{ steps.environment.outputs.lowercase }}
+          dep: deploy -o slack_webhook=${{ secrets.slack-webhook }} --revision=${{ github.sha }} ${{ steps.environment.outputs.lowercase }}
           deployer-version: ${{ inputs.deployer-version }}
           private-key: ${{ secrets.private-key }}
