--- a/.github/workflows/bun.yaml
+++ b/.github/workflows/bun.yaml
@@ -33,10 +33,10 @@ jobs:
         uses: actions/checkout@v4.1.1
 
       - name: Use Bun
-        uses: oven-sh/setup-bun@v1.1.1
+        uses: oven-sh/setup-bun@v1.2.0
 
       - name: Install Bun Dependencies
-        run: bun install
+        run: bun install --frozen-lockfile
 
       - name: Update Browserslist
         if: ${{ inputs.update-browserslist }}
