feat: added better deployer verbosity

--- a/.github/workflows/deployer.yaml
+++ b/.github/workflows/deployer.yaml
@@ -148,3 +148,4 @@ jobs:
           deployer-version: ${{ inputs.deployer-version }}
           private-key: ${{ secrets.private-key }}
           ssh-config: ${{ secrets.ssh-config || '' }}
+          verbosity: -vvv
