--- a/.github/workflows/deployer.yaml
+++ b/.github/workflows/deployer.yaml
@@ -93,6 +93,10 @@ jobs:
         if: ${{ inputs.run-composer }}
         run: composer install --no-dev --no-interaction --no-progress --optimize-autoloader --prefer-dist --verbose
 
+      - name: Remove Composer Authentication
+        if: ${{ inputs.use-composer-auth }}
+        run: rm -f $GITHUB_WORKSPACE/auth.json
+
       - name: Use Bun
         if: ${{ inputs.run-bun }}
         uses: oven-sh/setup-bun@v1.2.0
@@ -140,12 +144,20 @@ jobs:
           curl -L -o /usr/local/bin/cloudflared https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64
           chmod +x /usr/local/bin/cloudflared
 
-      - name: Deploy
+      - name: Add SSH Config
         if: ${{ inputs.use-cloudflared }}
+        run: |
+          mkdir -p ~/.ssh
+          echo '${{ secrets.ssh-config }}' >> ~/.ssh/config
+          chmod 600 ~/.ssh/config
+
+      - name: Deploy
         uses: deployphp/action@v1.0.22
         with:
           dep: deploy -o slack_webhook=${{ secrets.slack-webhook }} --revision=${{ github.sha }} ${{ steps.environment.outputs.lowercase }}
           deployer-version: ${{ inputs.deployer-version }}
           private-key: ${{ secrets.private-key }}
-          ssh-config: ${{ secrets.ssh-config || '' }}
-          verbosity: -vvv
+
+      - name: Remove SSH Config
+        if: ${{ inputs.use-cloudflared }}
+        run: rm -f ~/.ssh/config
