--- a/.github/workflows/deployer.yaml
+++ b/.github/workflows/deployer.yaml
@@ -93,6 +93,10 @@ jobs:
         if: ${{ inputs.run-composer }}
         run: composer install --no-dev --no-interaction --no-progress --optimize-autoloader --prefer-dist --verbose
 
+      - name: Remove Composer Authentication
+        if: ${{ inputs.use-composer-auth }}
+        run: rm -f $GITHUB_WORKSPACE/auth.json
+
       - name: Use Bun
         if: ${{ inputs.run-bun }}
         uses: oven-sh/setup-bun@v1.2.0
