--- a/.github/workflows/deployer.yaml
+++ b/.github/workflows/deployer.yaml
@@ -107,7 +107,7 @@ jobs:
 
       - name: Update Browserslist (Bun)
         if: ${{ inputs.run-bun && inputs.update-browserslist }}
-        run: echo "Not implemented yet"
+        run: bunx update-browserslist-db@latest
 
       - name: Run Bun Production
         if: ${{ inputs.run-bun }}
